# scaler_school

./: .env.example  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate_submission.py
graders/: grader1.py  grader2.py  grader3.py
server/: app.py
tasks/: task1.py  task2.py  task3.py
