[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-agent"
version = "1.0.0"
description = "OpenEnv Agent evaluation Space"
requires-python = ">=3.10"
dependencies = [
	"fastapi>=0.110.0",
	"uvicorn>=0.29.0",
	"python-dotenv>=1.0.0",
	"pyyaml>=6.0",
	"openai>=1.0.0",
	"openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["app", "inference", "validate_submission"]

[tool.setuptools.packages.find]
include = ["server*", "tasks*", "graders*"]
